--- a/contact.html
+++ b/contact.html
@@ -216,7 +216,8 @@
     
       </section>
 
-
+ 
+      <script src="js/main.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
