--- a/gallery.html
+++ b/gallery.html
@@ -294,6 +294,8 @@
     
       </section>
 
+       
+  <script src="js/main.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   
