--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 
           <nav class="navbar navbar-expand-lg ">
 
-            <a class="navbar-brand logo" href="#"> <img src="./images/logo.png" alt="logo"></a>
+            <a class="navbar-brand logo" href="index.html"><img src="images/logo.png" alt="logo" class="img-fluid"></a>
+            <!-- <a class="navbar-brand logo" href="index.html"><span>CHAIII</span> <img src="https://cdn-icons-png.flaticon.com/128/5346/5346740.png" alt="logo" class="img-fluid"></a> -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <i class="fa-solid fa-bars-staggered"></i>
